fix: keep continuous chart compatible with minSdk 26